--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <html>
 	<head>
 		<title>Portfólio - Juliani Chagas</title>
+		<meta property="og:image" content="images/bg.jpg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://kit-pro.fontawesome.com/releases/v6.0.0/css/pro.min.css" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="shortcut icon" type="imagex/png" href="./images/icon.ico">
-		<meta property="og:image" content="./images/bg.jpg">
 	</head>
 	<body class="is-preload">
 
@@ -56,9 +56,9 @@
 										<h2 class="major">Sobre mim</h2>
 										<h3 id="content">Sou Juliani Chagas,</h3>
 										<p>Bacharel em Sistemas de Informação e formada no MBA em Gestão Estratégica da Tecnologia da Informação pela FGV - Fundação Getúlio Vargas.</p>
-										<p>Possuo experiência de mais de 2 anos e meio em PLSQL e bootcamp em ciência de dados pela Impacta com duração de 208 horas.
-Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as seguradoras Mapfre e Banco do Brasil. Por mais de 2 anos e meio, trabalhei com equipe localizada nos EUA e em outros locais do mundo, fazendo uso diário da lingua inglesa, tanto na forma escrita como falada.</p>
-										<p>Busco uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções utilizando dados.</p>
+										<p>Tenho experiência profissional em realização de ETL com Python, consultas a APIs, automatização web com Selenium e criação de bancos de dados SQL em modelos Star e Snow Flake. Isso facilita a análise de dados ao fornecer estruturas otimizadas. Para a visualização dos dados, utilizo a criação de Dashboards no Streamlit e Power BI, permitindo que as informações sejam apresentadas de maneira intuitiva e interativa. Possuo conhecimentos em algoritmos de machine learning para resolução de problemas de clusterização, classificação e regressão.</p>
+										<p>Trabalhei aproximadamente 5 anos na IBM, sendo metade deste período com PLSQL, fazendo parte do time Scrum no desenvolvimento dos apps para as seguradoras Mapfre e Banco do Brasil. Posteriormente na IBM, trabalhei com equipe localizada nos EUA e em outros locais do mundo, fazendo uso diário da lingua inglesa, tanto na forma escrita como falada.</p>
+										<!--<p>Busco uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções utilizando dados.</p>-->
 									</div>
 								</div>
 							</section>
@@ -68,6 +68,7 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 								<div class="inner">
 									<div class="content">
 										<h2 class="major">Habilidades</h2>
+										<!-- EDITAR - ADICIONAR LISTA DE ALGORITMOS DE MACHINE LEARNING -->
 									<table>
 										<tr>
 											<td>
@@ -76,11 +77,12 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 											<td>
 												<h3 class="major">Linguagens de Programação e Banco de Dados</h3>
 												<ul>
-													<li>Python com foco em análise e visualização de dados.</li>
-													<li>Web scraping com Python.</li>
-													<li>SQL para extração de dados.</li>
-													<li>R para modelagem estatística.</li>
-													<li>Banco de Dados.</li>
+													<li>Python com foco em análise e visualização de dados</li>
+													<li>Extração de Dados via API</li>
+													<li>Web scraping com Python</li>
+													<li>SQL para extração de dados</li>
+													<li>R para modelagem estatística</li>
+													<li>Banco de Dados</li>
 												</ul>
 											</td>
 										</tr>
@@ -128,13 +130,27 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 												<li>Problemas abordados desde a concepção do desafio de negócio até a implementação do algoritmo de machine learning. <!--treinado em produção, utilizando ferramentas de Cloud Computing.<--></li>
 											</p>
 
+											<h3 id="content">1+ ano em Business Intelligence</h3>
+											<p>
+												<li>Elaboração de relatórios de vendas e de clientes para facilitar as campanhas de marketing e tomadas de decisões da gerência, visando a maximização de lucros;</li>
+												<li>Extração de dados via API das plataformas Google Analytics (UA e GA4), SaaS e ERP para e-commerce, dispensando a necessidade de acesso manual a elas;</li>
+												<li>Transformação e limpeza de dados utilizando linguagem Python e bibliotecas como Pandas, Numpy, Requests, Json, entre outras;</li>
+												<li>Desenvolvimento da arquitetura e criação de banco de dados SQLite em Star e Snow Flake para facilitar as análises de BI;</li>
+												<li>Disponibilização das informações em Dashboard feito em Streamlit</li>
+												<li>Automatização Web através de Selenium.</li>
+												<li>Atualização automática de planilhas do Google Sheets, feito via API do Google Sheets;</li>
+												<li>Inserção e consulta ao banco de dados, evitando divergência de informações e tornando o acesso a elas menos custoso por estar mais centralizado e facilitado;</li>
+												<li>Segmentação de clientes para que recebam promoções de acordo com perfil de compra;</li>
+												<li>Configuração para execução automática e diária da ETL.</li>
+											</p>
+
 											<h3 id="content">2,5+ anos em desenvolvimento PL/SQL na IBM, Mapfre e Banco do Brasil</h3>
 											<p>
 												<li>Membro da equipe de desenvolvimento do time Scrum;</li>
 												<li>Criação do aplicativo mobile das seguradoras Mapfre e Banco do Brasil, permitindo que seus clientes possam abrir sinistro, solicitar serviços e acessarem suas informações com mais rapidez e praticidade;</li>
 												<li>Desenvolvimento PLSQL de novos projetos e melhoria de performance de programas existentes.</li>
 										  </p>
-											<h3 id="content">2,5+ anos trabalhando na IBM com equipe localizada no exterior</h3>
+											<h3 id="content">2,5+ anos trabalhando na IBM com equipe internacional</h3>
 											<p>
 												<li>Trabalho diário com funcionários de todo o mundo, principalmente dos EUA;</li>
 												<li>Ponto focal de boas vindas a novos funcionários, ajudando na integração deles com a equipe e tornando-os aptos para iniciar em suas funções mais rapidamente.</li>
@@ -149,6 +165,36 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 									<h2 class="major">Projetos de ciência de dados</h2>
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/cluster.jpg" alt="" /></a>
+											<h3 class="major">Segmentaçao de clientes para programa de fidelização</h3>
+											<h4>Em construção</h4>
+											<p>Clusterização de clientes desenvolvida com o objetivo de identificar os clientes mais valiosos para um programa de fidelização em um e-commerce. O projeto utiliza técnicas de análise de dados e aprendizado de máquina para separar os clientes de acordo com seu perfil de compra.</p>
+											<h4>Ferramentas:</h4>
+											<ul>
+												<li>Python</li>
+												<li>Pandas, Seaborn, Matplotlib, Sklearn, Pandas profiling</li>
+												<li>Técnicas de redução de dimensionamento: PCA, t-SNE e UMAP/Random Forest</li>
+												<li>Algoritmos de Clusterização (K-Means, Gaussian Mixture Model, Hierarchical Clustering e DBSCAN)</li>
+												<li>Métrica de performance: Silhouette Score</li>
+											</ul>
+											<a href="https://github.com/julianichagas/portfolio/tree/main/Cluster%20Insiders" target="_blank" class="special">Saiba mais</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/hotel.jpg" alt="" /></a>
+											<h3 class="major">Predição de cancelamento de reservas de hotel - Hackday</h3>
+											<h4>Competição com prazo de resolução de 2 dias</h4>
+											<p>Análise do comportamento dos consumidores de uma rede de hotéis, que frequentemente cancelavam suas reservas mesmo no cenário pós pandêmico. O objetivo é predizer quais clientes cancelariam suas reservas para tomar melhores decisões estratégicas. Foi realizada análise exploratória de dados e testes de algoritmos de machine learning de classificação como XGBoost, Random Forest e CatBoost.</p>
+											<h4>Ferramentas:</h4>
+											<ul>
+												<li>Python</li>
+												<li>Pandas, Seaborn, Matplotlib, Sklearn</li>
+												<li>Técnicas de redimensionamento de variáveis: RobustScaler, Boolean, Label e Ordinal Encoder, </li>
+												<li>Algoritmos de classificação (KNN, Random Forest, Decision Tree, XGBoost, Naive Bayes)</li>
+												<li>Métrica de performance: F-Score</li>
+											</ul>
+											<a href="https://github.com/julianichagas/portfolio/tree/main/4th%20Hackday%20-%20CDS" target="_blank" class="special">Saiba mais</a>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3 class="major">Manipulação e visualização de dados utilizando SQL, Python e R</h3>
 											<h4>Teste prático de processo seletivo:</h4>
@@ -159,12 +205,12 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 												<li>Jupyter Notebook.</li>
 												<li>MySQL.</li>
 											</ul>
-											<a href="https://github.com/julianichagas/selection-processes/blob/main/Challenge.ipynb" target="_blank" class="special">Acesse o teste</a>
+											<a href="https://github.com/julianichagas/selection-processes/blob/main/Challenge.ipynb" target="_blank" class="special">Saiba mais</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3 class="major">Previsão de vendas utilizando dados da loja, promoção e concorrentes</h3>
-											<h4>Projeto em construção!</h4>
+											<h4>Em construção</h4>
 											<p>Python, Estatística e técnicas de Machine Learning para calcular a quantidade de vendas previstas para as próximas seis semanas de um seguimento de lojas com base em seus dados, promoções e concorrentes</p>
 											<h4>Ferramentas:</h4>
 											<ul>
@@ -173,12 +219,12 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 												<li>Machine Learning.</li>
 												<!--<li>(COLOCAR BANCO DE DADOS, SE FOR USADO).</li>-->
 											</ul>
-											<a href="https://github.com/julianichagas/portfolio/blob/main/Rossmann%20Store%20Sales/Rossmann%20Store%20Sales.ipynb" target="_blank" class="special">Acesse a prévia do projeto</a>
+											<a href="https://github.com/julianichagas/portfolio/tree/main/Rossmann%20Store%20Sales" target="_blank" class="special">Saiba mais</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3 class="major">Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
-											<h4>Projeto em construção!</h4>
+											<h4>Em construção</h4>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.</p>
 											<h4>Ferramentas:</h4>
 											<ul>
@@ -188,7 +234,7 @@ Trabalhei na IBM com o time Scrum no desenvolvimento SQL dos apps para as segura
 												<li>Heroku Cloud.</li>
 												<li>Streamlit Python framework web.</li>
 											</ul>
-											<!--<a href="#" class="special">Acesse o projeto</a>-->
+											<!--<a href="#" class="special">Saiba mais</a>-->
 										</article>
 
 									</section>
